--- a/dev/sass/_header.scss
+++ b/dev/sass/_header.scss
@@ -3,20 +3,17 @@
 	// background-color:rgba(black,0.1);		
 
 	.logo {
-		width:20%;
+		width:70%;
+		@include below(pem(480)) {max-width: 220px;}
 		margin:0 auto;
-		// display:block;		
-		// width:100%;
-		// height:0;		
-		// background:transparent url(../img/logo.svg) no-repeat scroll center center;
-		// background-size:contain;		
-		// padding-top:42%;
-		// @include above(pem(480)){padding-top:21%;}
-		// @include above(pem(768)){padding-top:16%;}
-		@include background(
-			// linear-gradient(left, $red 5%, $blue 95%)
-			radial-gradient(50% 10%, 100% 90%, $blue, $grey)
-		)
+		@include above(pem(480)) {width:25%;}
+		@include above(pem(768)) {width:20%;}
+		@include above(pem(1024)) {width:15%;}
+
+		// @include background(
+		// 	// linear-gradient(left, $red 5%, $blue 95%)
+		// 	radial-gradient(50% 10%, 100% 90%, $blue, $grey)
+		// )
 	}
 }
 
@@ -28,7 +25,8 @@
 	line-height:1;
 
 	// actuated is bold
-	.name--one {font-weight:$font-bold;font-size:0.9em;margin-top:0.05em}
+	.name--one {font-weight:$font-bold;font-size:0.95em;margin-top:0.05em}
+	.name--two {font-size:1.15em;}
 
 	// split up the words for wrapping under 480px.
 	@include below(pem(480)) {.names:before {content:' ';display:inline;}}
@@ -52,6 +50,7 @@
 		}
 		.name--two {
 			text-align:left;
+			font-size:1em;
 		}	
 	}
 
@@ -72,10 +71,10 @@
 
 	@include above(pem(1024))
 	{
-		font-size:4em;
+		font-size:3em;
 
-		$gap:25%;
-		margin-top:7%;
+		$gap:20%;
+		margin-top:4.5%;
 
 		.names {
 			width:(100%-$gap)/2;
