--- a/_layouts/markdown.html
+++ b/_layouts/markdown.html
@@ -7,7 +7,7 @@
  		{{ content }}
  	</div><!-- 
  --><div class="block square">
-		<img src="http://placekitten.com/600/600" width="100%" class="res-image" />
+		<img src="{{page.image}}" width="100%" class="res-image" />
 	</div>
  </div>
 
