--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="logo">
-		<div class="svg-wrapper" style="padding-top:75%;">{% include coloured-logo.svg %}</div>
+		<div class="resp-wrap" style="padding-top:75%;">{% include coloured-logo.svg %}</div>
 	</div>
 	<h1 class="name">
 		<span class="names name--one t-red">actuated</span><!-- 
