--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,4 +1,4 @@
-<header class="header">
+<a class="header" href="{{site.url}}">
 	<div class="logo">
 		<div class="resp-wrap" style="padding-top:75%;">{% include coloured-logo.svg %}</div>
 	</div>
@@ -6,7 +6,7 @@
 		<span class="names name--one t-red">actuated</span><!-- 
 		--><span class="names name--two t-blue">futures</span>
 	</h1><!-- .name -->
-</header>
+</a>
 
 <nav class="topnav" id="showmenu">
 	<ul class="nav">
