--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html class="no-js">
+<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7 no-js"> <![endif]-->
+<!--[if IE 7]>    <html class="lt-ie9 lt-ie8 no-js"> <![endif]-->
+<!--[if IE 8]>    <html class="lt-ie9 no-js"> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
