--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -2,21 +2,20 @@
 <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7 no-js"> <![endif]-->
 <!--[if IE 7]>    <html class="lt-ie9 lt-ie8 no-js"> <![endif]-->
 <!--[if IE 8]>    <html class="lt-ie9 no-js"> <![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
+<!--[if gt IE 8]><!--><html class="ie-ok no-js"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{{ page.title }}</title>
+        <title>Actuated Futures - {{ page.title }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         <link href='http://fonts.googleapis.com/css?family=Exo+2:100italic,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
-        <!--[if lte IE 8]>
-            <link rel="stylesheet" href="{{site.url}}/css/ielte8.css">
-        <![endif]-->
-        <!--[if gt IE 8]><!-->
-            <link rel="stylesheet" href="{{site.url}}/css/main.css">
-        <!--<![endif]-->
+        <link rel="stylesheet" href="{{site.url}}/css/main.css">
         <script src="{{site.url}}/js/modernizr.js"></script>
     </head>
 <body>
+<!--[if lt IE 9]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <div class="ielte8-wrapper">
+<![endif]-->
