--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,6 +1,15 @@
 <a class="header" href="{{site.url}}">
-	<div class="logo">
-		<div class="resp-wrap" style="padding-top:75%;">{% include coloured-logo.svg %}</div>
+	<div class="logo">		
+		<div class="resp-wrap resp-logo">
+			<svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 400 319.553" preserveAspectRatio="xMidYMin slice">
+				<switch>
+				{% include coloured-logo.svg %}
+				<foreignObject>
+					<img src="/img/coloured-logo.png" width="50%" alt="the actuated futures logo" />
+				</foreignObject>
+				</switch>
+			</svg>
+		</div>
 	</div>
 	<h1 class="name">
 		<span class="names name--one t-red">actuated</span><!-- 
