--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -13,7 +13,7 @@
 		{% for post in site.posts limit:20 %}
 			<li>
 			    <!-- <span>{{ post.date | date: "%B %e, %Y" | ordinalize  }}</span> -->
-			    <a href="{{ post.url }}">{{ post.title }}</a>
+			    <a href="{{site.url}}{{ post.url }}">{{ post.title }}</a>
 		    </li>
 		{% endfor %}
 		</ul>
