changing images around adding a map to the contact page.

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -7,7 +7,9 @@
  		{{ content }}
  	</div><!-- 
  --><div class="block square">
-		<img src="{{page.image}}" width="100%" class="res-image" />
+ 		<div class="resp-wrap" style="padding-top:100%">
+			<iframe width='100%' frameBorder='0' src='http://a.tiles.mapbox.com/v3/morganesque.h6l6feac/mm/zoompan.html'></iframe>
+		</div>
 	</div>
  </div>
 
