--- a/css/main.css
+++ b/css/main.css
@@ -1763,62 +1763,62 @@ h2 { margin-bottom: 8px; }
   .topnav li a:hover.current { background-color: white; background-position: 0 100px; color: #ff005f; } }
 
 /* line 4, ../../dev/sass/_layout.scss */
-[class^="layout-"], [class*=" layout-"] { margin: 0 12px; max-width: 1042px; }
+[class^="layout-"], [class*=" layout-"] { margin: 0 12px 24px; max-width: 1042px; }
 @media only screen and (min-width: 30em) { /* line 4, ../../dev/sass/_layout.scss */
-  [class^="layout-"], [class*=" layout-"] { margin: 0 24px; } }
+  [class^="layout-"], [class*=" layout-"] { margin: 0 24px 24px; } }
+@media only screen and (min-width: 30em) { /* line 4, ../../dev/sass/_layout.scss */
+  [class^="layout-"], [class*=" layout-"] { margin: 0 24px 48px; } }
 @media only screen and (min-width: 67em) { /* line 4, ../../dev/sass/_layout.scss */
-  [class^="layout-"], [class*=" layout-"] { margin: 0 auto; } }
-@media only screen and (min-width: 30em) { /* line 17, ../../dev/sass/_layout.scss */
+  [class^="layout-"], [class*=" layout-"] { margin: 0 auto 96px; } }
+@media only screen and (min-width: 30em) { /* line 24, ../../dev/sass/_layout.scss */
   [class^="layout-"] .block, [class*=" layout-"] .block { display: -moz-inline-stack; display: inline-block; vertical-align: middle; *vertical-align: auto; zoom: 1; *display: inline; vertical-align: top; } }
+/* line 31, ../../dev/sass/_layout.scss */
+[class^="layout-"] .block *:last-child, [class*=" layout-"] .block *:last-child { margin-bottom: 0; }
 
-/* line 28, ../../dev/sass/_layout.scss */
+/* line 39, ../../dev/sass/_layout.scss */
 .layout--uno { padding-bottom: 48px; }
-/* line 29, ../../dev/sass/_layout.scss */
+/* line 40, ../../dev/sass/_layout.scss */
 .layout--uno .text { width: 100%; }
 
-/* line 37, ../../dev/sass/_layout.scss */
+/* line 48, ../../dev/sass/_layout.scss */
 .layout--duo.rev { direction: rtl; }
-/* line 39, ../../dev/sass/_layout.scss */
+/* line 50, ../../dev/sass/_layout.scss */
 .layout--duo .square { direction: ltr; }
-@media only screen and (min-width: 31em) { /* line 39, ../../dev/sass/_layout.scss */
+@media only screen and (min-width: 31em) { /* line 50, ../../dev/sass/_layout.scss */
   .layout--duo .square { width: 38%; margin-bottom: 0; padding: 0 0 0 24px; } }
-@media only screen and (min-width: 31em) { /* line 49, ../../dev/sass/_layout.scss */
+@media only screen and (min-width: 31em) { /* line 60, ../../dev/sass/_layout.scss */
   .layout--duo.rev .square { padding: 0 24px 0 0; } }
-/* line 56, ../../dev/sass/_layout.scss */
-.layout--duo .text { direction: ltr; margin-bottom: 24px; padding-bottom: 48px; }
-@media only screen and (min-width: 31em) { /* line 56, ../../dev/sass/_layout.scss */
+/* line 67, ../../dev/sass/_layout.scss */
+.layout--duo .text { direction: ltr; margin-bottom: 24px; }
+@media only screen and (min-width: 31em) { /* line 67, ../../dev/sass/_layout.scss */
   .layout--duo .text { margin-bottom: 0; width: 62%; } }
 
-/* line 71, ../../dev/sass/_layout.scss */
+/* line 81, ../../dev/sass/_layout.scss */
 .layout--trio { margin-bottom: 24px; }
-/* line 78, ../../dev/sass/_layout.scss */
+/* line 88, ../../dev/sass/_layout.scss */
 .layout--trio .text, .layout--trio .square { width: 100%; }
-/* line 80, ../../dev/sass/_layout.scss */
+/* line 90, ../../dev/sass/_layout.scss */
 .layout--trio.rev { direction: rtl; }
-/* line 82, ../../dev/sass/_layout.scss */
+/* line 92, ../../dev/sass/_layout.scss */
 .layout--trio.rev .text, .layout--trio.rev .square { direction: ltr; }
-@media only screen and (min-width: 31em) { /* line 89, ../../dev/sass/_layout.scss */
-  .layout--trio .first { width: 76%; padding: 0 24px 0 0; text-align: right; }
-  /* line 90, ../../dev/sass/_layout.scss */
-  .layout--trio .second { width: 0%; padding: 0 0 0 0; }
-  /* line 91, ../../dev/sass/_layout.scss */
+@media only screen and (min-width: 31em) { /* line 99, ../../dev/sass/_layout.scss */
+  .layout--trio .first { width: 76%; padding: 0 0 0 24px; }
+  /* line 100, ../../dev/sass/_layout.scss */
+  .layout--trio .second { width: 0%; padding: 0 0 0 0; text-align: right; }
+  /* line 101, ../../dev/sass/_layout.scss */
   .layout--trio .square { width: 24%; }
-  /* line 94, ../../dev/sass/_layout.scss */
-  .layout--trio.rev .first { padding: 0 0 0 24px; text-align: left; }
-  /* line 95, ../../dev/sass/_layout.scss */
-  .layout--trio.rev .second { padding: 0 0 0 0; } }
-@media only screen and (min-width: 48em) { /* line 101, ../../dev/sass/_layout.scss */
+  /* line 104, ../../dev/sass/_layout.scss */
+  .layout--trio.rev .first { padding: 0 24px 0 0; }
+  /* line 105, ../../dev/sass/_layout.scss */
+  .layout--trio.rev .second { padding: 0 0 0 0; text-align: left; } }
+@media only screen and (min-width: 48em) { /* line 111, ../../dev/sass/_layout.scss */
   .layout--trio .first { width: 52%; }
-  /* line 102, ../../dev/sass/_layout.scss */
+  /* line 112, ../../dev/sass/_layout.scss */
   .layout--trio .second { width: 14%; padding: 0 0 0 24px; }
-  /* line 103, ../../dev/sass/_layout.scss */
-  .layout--trio .square { width: 24%; }
-  /* line 106, ../../dev/sass/_layout.scss */
-  .layout--trio.rev .second { padding: 0 24px 0 0; } }
-@media only screen and (min-width: 80em) { /* line 112, ../../dev/sass/_layout.scss */
-  .layout--trio .square { width: 24%; }
   /* line 113, ../../dev/sass/_layout.scss */
-  .layout--trio .text { width: 38%; } }
+  .layout--trio .square { width: 24%; }
+  /* line 116, ../../dev/sass/_layout.scss */
+  .layout--trio.rev .second { padding: 0 24px 0 0; } }
 
 /* line 3, ../../dev/sass/_footer.scss */
 .footer { position: relative; margin-top: 1.5em; padding-bottom: 24px; }
