--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -8,16 +8,21 @@
 			<h2>{{ page.title }}</h2>
 			{{ content }}
 	</div><!--
- --><div class="block square">
- 		<ul>
-		{% for post in site.posts limit:20 %}
-			<li>
-			    <!-- <span>{{ post.date | date: "%B %e, %Y" | ordinalize  }}</span> -->
-			    <a href="{{site.url}}{{ post.url }}">{{ post.title }}</a>
-		    </li>
-		{% endfor %}
-		</ul>
-	</div>
-</div>
+ --><div class="block square sidebar">
+ 		<img src="{{page.image}}" width="100%" class="res-image" />
+
+		<div class="news">
+			<h3>More news</h3>
+	 		<ul>
+			{% for post in site.posts limit:20 %}
+				<li>
+				    <!-- <span>{{ post.date | date: "%B %e, %Y" | ordinalize  }}</span> -->
+				    <a href="{{site.url}}{{ post.url }}">{{ post.title }}</a>
+			    </li>
+			{% endfor %}
+			</ul>	
+		</div><!-- .news -->
+	</div><!-- .block -->
+</div><!-- .layout -->
 
 {% include bottom.html %}
