adding the latest image to the new index page.

--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -9,7 +9,7 @@
 			{{ content }}
 	</div><!--
  --><div class="block square sidebar">
- 		<img src="{{page.image}}" width="100%" class="res-image" />
+ 		<img src="{{site.url}}{{page.image}}" width="100%" class="res-image" />
 
 		<div class="news">
 			<h3>More news</h3>
