tinkering with the contact map and changing the home page photo

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -5,7 +5,7 @@
 				<switch>
 				{% include coloured-logo.svg %}
 				<foreignObject>
-					<img src="/img/coloured-logo.png" width="50%" alt="the actuated futures logo" />
+					<img src="{{site.url}}/img/coloured-logo.png" width="50%" alt="the actuated futures logo" />
 				</foreignObject>
 				</switch>
 			</svg>
