--- a/css/ielte8.css
+++ b/css/ielte8.css
@@ -1639,7 +1639,7 @@ h2 { margin-bottom: 8px; }
 /* line 4, ../../dev/sass/_responsive.scss */
 .resp-wrap { position: relative; width: 100%; height: 0; overflow: hidden; text-align: center; }
 /* line 11, ../../dev/sass/_responsive.scss */
-.resp-wrap svg, .resp-wrap iframe { position: absolute; top: 0; left: 0; }
+.resp-wrap svg, .resp-wrap iframe { position: absolute !important; top: 0; left: 0; }
 /* line 17, ../../dev/sass/_responsive.scss */
 .resp-wrap iframe { width: 100%; height: 100%; }
 /* line 22, ../../dev/sass/_responsive.scss */
